examples/good/05-06-if_while.latf
int fun() {
    if (true) {
        if (false) {

        }
        else {
            return 1;
        }
    }
}

int fun2() {
    while (true) {
        if (false) {

        }
        else {
            while (false) {

            }
            while (true) {
                return 2;
            }
        }
    }
}

int main() {
    int n = 10;
    int a = 0;
    int b = 1;
    int i = 0;
    
    while (i < n) {
        int c = a + b;
        a = b;
        b = c;
        i++;
    }
    int x = a;

    if (x > 50) {
        println("x is greater than 50"); // <-
        if (x > 100) {
            println("x is greater than 100");
        }
        else {
            println("x is less than or equal to 100"); // <-
        }
    }
    else {
        println("x is less than or equal to 50");
    }

    x = fun();
    println(x); // 1;

    x = fun2();
    println(x); // 2;

    return 0;
}