examples/bad/auto_return.latf
auto f() {
    if (true) {
        return 1;
    }
    else {
        return false; // error - different return types
    }
}

int main() {
    return 0;
}